--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
                 <div class="row  sideBar p-2 pt-3" style="background-color: rgb(137, 137, 193);">
-                    <div class="col">
+                    <div class="col" style="color: white;">
                         <h6>Guide and Tools</h6>
                         <p>Guidelines</p>
                         <p>Mentorship</p>
