--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="../bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./bootstrap-5.3.3-dist/css/bootstrap.min.css">
 
         <!-- Sweet alert -->
     <link href="
@@ -17,9 +17,9 @@
 
     <style>
         :root {
-            --light-color: pink;
+            --light-color: rgb(217, 222, 252);
             --gradient: linear-gradient(270deg, pink, rgb(200, 68, 90));
-            --color: rgb(200, 68, 90);
+            --color: rgb(68, 36, 156);
         }
 
         .google {
