--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <link rel="stylesheet" href="style.css"> -->
-    <link rel="stylesheet" href="../bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./bootstrap-5.3.3-dist/css/bootstrap.min.css">
     <link href="
     https://cdn.jsdelivr.net/npm/sweetalert2@11.14.4/dist/sweetalert2.min.css
     " rel="stylesheet">
@@ -13,9 +13,9 @@
              <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <style>
         :root {
-            --light-color: pink;
+            --light-color: rgb(217, 222, 252);
             --gradient: linear-gradient(270deg, pink, rgb(200, 68, 90));
-            --color: rgb(200, 68, 90);
+            --color: rgb(41, 63, 183);
         }
 
         .google {
