--- a/login.html
+++ b/login.html
@@ -123,7 +123,7 @@
                    
                     <div class="networks">
                         <!-- <a href="" id="google"> -->
-                            <img src="../images/google-removebg-preview.png" alt="Google" class="google" id="google" >
+                            <img src="./images/google-removebg-preview.png" alt="Google" class="google" id="google" >
                         <!-- </a> -->
                     </div>
                  
