--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg p-3 above w-100">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="./images/7ab5b2fcae9fe6153eb9797b1b1435b7.png" alt="logo" id="logo">
@@ -44,7 +44,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Career</a>
               </li>
               <li class="nav-item me-2">
-                <button type="button" class="btn btn-dark" id="addPost" style="display: none;">Add post</button>
+                <button type="button" class="btn btn-outline-secondary" id="addPost" style="display: none;">Add post</button>
 
               </li>
               <li class="nav-item me-2">
@@ -55,7 +55,7 @@
           </div>
         </div>
       </nav>
-      <div class="container">
+      <div class="container start">
 <div class="head mt-4">
 
     <div class="row">
@@ -73,10 +73,10 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-3 col-md-4 col-sm-12 mt-5">
+            <div class="col-lg-3 col-md-4 col-sm-12 mt-5 p-2 side">
                 <div class="row sideBar " style="background-color: rgb(209, 209, 248);">
-                    <div class="col both pt-2">
-                        <h6>Blog Topics</h6>
+                    <div class="col both  ps-3 pt-3">
+                        <h6 class="mb-4">Blog Topics</h6>
                         <p>Company</p>
                         <p>Design</p>
                         <p>Technology</p>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="row  sideBar p-2 pt-3" style="background-color: rgb(137, 137, 193);">
                     <div class="col" style="color: white;">
-                        <h6>Guide and Tools</h6>
+                        <h6 class="mb-4">Guide and Tools</h6>
                         <p>Guidelines</p>
                         <p>Mentorship</p>
                         <p>Tutorial</p>
@@ -101,7 +101,7 @@
             <div class="col ps-5 pt-5">
                 <div class="row">
                     <div class="col">
-                        <h5>Trending Topics</h5>
+                        <h5 style="color: rgb(189, 189, 189);">Trending Topics</h5>
                         <div class="btns p-2">
                             <button type="button" class="btn btn-outline-secondary">Design Thinking</button>
                             <button type="button" class="btn btn-outline-secondary">Technology</button>
