--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Market</a>
               </li>
               <li class="nav-item me-2">
-                <a class="nav-link active" aria-current="page" href="#">Blog</a>
+                <a class="nav-link active" aria-current="page" href="#trending">Blog</a>
               </li>
               <li class="nav-item me-2">
                 <a class="nav-link active" aria-current="page" href="#">Career</a>
@@ -60,10 +60,10 @@
 
     <div class="row">
         <div class="col-lg-8 col-md-8 col-sm-12">
-    <h2 style="color: rgb(62, 62, 214);" class="mt-3 mb-3">Insights from our team</h2>
+    <h2 style="color: rgb(44, 44, 191);" class="mt-3 mb-3">Insights from our team</h2>
     <p style="color: grey;">Powerful Trading Tools and Features for Experienced Investors</p> </div>
     <div class="col-lg-4 col-md-4 col-sm-12">
-    <form class="d-flex" role="search">
+    <form class="d-flex mt-3" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn  btn-outline-primary" type="submit">Search</button>
       </form>
@@ -101,7 +101,7 @@
             <div class="col ps-5 pt-5">
                 <div class="row">
                     <div class="col">
-                        <h5 style="color: rgb(189, 189, 189);">Trending Topics</h5>
+                        <h5 style="color: rgb(189, 189, 189);" id="trending">Trending Topics</h5>
                         <div class="btns p-2">
                             <button type="button" class="btn btn-outline-secondary">Design Thinking</button>
                             <button type="button" class="btn btn-outline-secondary">Technology</button>
