--- a/login.html
+++ b/login.html
@@ -18,10 +18,13 @@
     <style>
         :root {
             --light-color: rgb(217, 222, 252);
-            --gradient: linear-gradient(270deg, pink, rgb(200, 68, 90));
-            --color: rgb(68, 36, 156);
+            --gradient: linear-gradient(270deg, rgb(184, 193, 242), rgb(69, 28, 184));
+            --color: rgb(50, 16, 143);
         }
-
+        .line a {
+            text-decoration: none;
+            color: blue;
+        }
         .google {
             width: 34px;
             height: 36px;
