--- a/register.html
+++ b/register.html
@@ -14,7 +14,7 @@
     <style>
         :root {
             --light-color: rgb(217, 222, 252);
-            --gradient: linear-gradient(270deg, pink, rgb(200, 68, 90));
+            --gradient: linear-gradient(270deg, rgb(184, 193, 242), rgb(69, 28, 184));
             --color: rgb(41, 63, 183);
         }
 
@@ -101,6 +101,10 @@
 
         .first-col:hover {
             filter: flip;
+        }
+        .line a {
+            text-decoration: none;
+            color: blue;
         }
     </style>
 </head>
