--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
           <p style="color: grey;">Powerful Trading Tools and Features for Experienced Investors</p>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <form class="d-flex" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="background-color: rgb(241, 241, 241)">
-            <button class="btn btnsearch me-2" type="submit">Search</button>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="background-color: rgb(241, 241, 241)" id="search-val" title="Search by Category">
+            <button class="btn btnsearch me-2" type="submit" id="searchBtn">Search</button>
             <button type="button" class="btn btnLogin" id="gotoLogin">Login</button>
           </form>
         </div>
